[package]
name = "cmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irony_cmt = { path = "../irony/irony_cmt" }
cmt_macros = { path = "../cement_macros" }
tgraph = { path = "../tgraph/tgraph" }
tgraph_macros = { path = "../tgraph/tgraph_macros" }
itertools = "0.11.0"
visible = "0.0.1"
rithm = "14.0.0"
arrayvec = "0.7.2"
array-macro = "2.1.5"
futures = "0.3"
log = "0.4.20"
traiter = "4.0.0"
bitvec = "1.0.1"
