[package]
name = "cmt_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.59"
quote = { version = "1.0.28" }
syn = { version = "2.0.18", features = ["full", "extra-traits", "visit", "visit-mut"] }
paste = "1.0.6"
itertools = "0.11.0"

[lib]
proc-macro=true
