[package]
name = "tgraph_macros"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = { version = "1.0" }
syn = { version = "2.0", features = [
    "full",
    "extra-traits",
    "visit",
    "visit-mut",
] }
paste = "1.0"
synstructure = "0.13"
change-case = "0.2"

[lib]
proc-macro = true

# [dev-dependencies]
# tgraph = {path = "../tgraph"}
